--- a/style.css
+++ b/style.css
@@ -209,3 +209,152 @@ footer {
     opacity: 1;
     top: 50%;
 }
+
+
+/* Responsive */
+@media (max-width: 991px)
+{
+    .main
+    {
+        padding: 40px;
+    }
+    header
+    {
+        padding: 20px 40px;
+    }
+    .slider
+    {
+        position: relative;
+        width: 100%;
+        height: 180px;
+    }
+    .slider .slides
+    {
+        position: absolute;
+        top: 50%;
+        padding: 0;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .slider .slides h2 
+    {
+        font-size: 2.5em;
+        text-align: center;
+    }
+    .slider .slides h2:last-child
+    {
+        text-align: center;
+    }
+    .content h2
+    {
+        font-size: 4em;
+    }
+    .picture
+    {
+        max-width: 100%;
+    }
+    footer
+    {
+        position: relative;
+        margin-top: 50px;
+        flex-direction: column-reverse;
+        padding: 0 40px;
+    }
+    .sci
+    {
+        margin-top: 40px;
+        display: flex;
+    }
+    .sci li a 
+    {
+        margin-right: none;
+        margin-left: 35px;
+    }
+    .toggle
+    {
+        position: relative;
+        width: 32px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        z-index: 1000;
+    }
+    .toggle.active
+    {
+        position: fixed;
+        top: 30px;
+        right: 40px;
+    }
+    .toggle::before
+    {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: var(--white);
+        transform: translateY(-10px);
+        transition: 0.25s;
+        box-shadow: 0 10px 0 var(--white);
+    }
+    .toggle.active::before
+    {
+        transform: translateY(0) rotate(45deg);
+        box-shadow: 0 0 0 var(--white);
+    }
+    .toggle::after
+    {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: var(--white);
+        transform: translateY(10px);
+        transition: 0.25s;
+    }
+    .toggle.active::after
+    {
+        transform: translateY(0) rotate(-45deg);
+    }
+    .navigation
+    {
+        display: none;
+    }
+    .navigation.active
+    {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 999;
+        background: var(--black);
+    }
+    .navigation li a
+    {
+        font-size: 1.5em;
+        margin: 10px 0;
+        display: inline-block;
+    }
+    .slider .slides h2 span {
+        font-size: 0.6em;
+        font-weight: 300;
+    }
+}
+@media (max-width: 610px)
+{
+    .content h2
+    {
+        font-size: 2.5em;
+    }
+    .picture
+    {
+        height: 350px;
+    }
+}
